fixing overflow 14

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ nav ul li a:hover {
 }
 
 .page-content {
+    overflow-x: hidden;
     flex-grow: 1; /* Allow content to take up remaining space */
     overflow-y: auto; /* Enable vertical scrolling */
 }
